--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "buzzphrasebot",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "A buzzphrase generator bot: https://twitter.com/buzzphrasebot",
   "main": "index.js",
   "scripts": {
@@ -22,6 +22,7 @@
   "dependencies": {
     "buzzphrase": "2.3.0",
     "dotenv": "4.0.0",
+    "hapi": "16.5.0",
     "lodash.capitalize": "4.2.1",
     "lodash.random": "3.2.0",
     "twit": "2.2.9",
